@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<object name="portal_skins">
+<object name="portal_skins" default_skin="Sunburst Theme">
  <object name="minaraad" meta_type="Filesystem Directory View"
-    directory="Products.minaraad:skins/minaraad"/>
+    directory="Products.minaraad:skins/minaraad" />
  <skin-path name="*">
   <layer name="tinymce" insert-after="custom"/>
   <layer name="minaraad" insert-after="custom"/>
