@@ -1,0 +1,3 @@
+<?xml version="1.0"?>
+<object name="portal_skins" default_skin="Sunburst Theme">
+</object>
